--- a/Kaggle/UseCase1/v1.ipynb
+++ b/Kaggle/UseCase1/v1.ipynb
@@ -13,12 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -29,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "_uuid": "b8766d740730b6498ef54d6e66aa2907d5c19205"
    },
    "outputs": [],
    "source": [
-    "input = pd.read_csv(\"C:/Users/Katta's/PycharmProjects/AI-ML/AI-ML/Kaggle/santander-customer-transaction-prediction/data/train.csv\")\n",
-    "val = pd.read_csv(\"C:/Users/Katta's/PycharmProjects/AI-ML/AI-ML/Kaggle/santander-customer-transaction-prediction/data/test.csv\")"
+    "input = pd.read_csv(\"C:/Users/Katta's/PycharmProjects/data/usecase1/train.csv\")\n",
+    "val = pd.read_csv(\"C:/Users/Katta's/PycharmProjects/data/usecase1/test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "_uuid": "7ca0be1517cd0ac2285f2ea468fe28cc475f60ff"
    },
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "_uuid": "7b576df4dc70ac08a7863b7369a626bcd4f1fc17"
    },
@@ -24284,7 +24292,7 @@
    },
    "outputs": [],
    "source": [
-    "result.to_csv(\"C:/Users/Katta's/PycharmProjects/AI-ML/AI-ML/Kaggle/santander-customer-transaction-prediction/data/submission1.csv\", index=False)\n"
+    "result.to_csv(\"C:/Users/Katta's/PycharmProjects/data/usecase1/submission1.csv\", index=False)\n"
    ]
   }
  ],
