--- a/UseCase6/v1.ipynb
+++ b/UseCase6/v1.ipynb
@@ -158,9 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pickle\n",
-    "# filename = 'finalized_model.sav'\n",
-    "# pickle.dump(model, open(filename, 'wb'))"
+    "import pickle\n",
+    "filename = 'finalized_model.sav'\n",
+    "pickle.dump(model, open(filename, 'wb'))"
    ]
   },
   {
