--- a/Competitions/UseCase4/usecase3.ipynb
+++ b/Competitions/UseCase4/usecase3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
