moved data processing to different python file
moved data processing to different python file

--- a/Costa Rican Household Poverty Level Prediction/multiclass-classification--simplified.ipynb
+++ b/Costa Rican Household Poverty Level Prediction/multiclass-classification--simplified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
     "import random\n",
-    "random.seed(10)"
+    "random.seed(10)\n",
+    "import data_pre as data_pre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,54 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_del_list = ['idhogar', 'Id','dependency','tamhog','r4t3', 'tamviv', 'r4h1', 'hogar_total','r4h2', 'r4h3', 'r4m1', 'r4m2','r4m3', 'hogar_nin', 'hogar_adul', 'hogar_mayor', 'SQBescolari','SQBage','SQBhogar_total','SQBedjefe','SQBhogar_nin','SQBovercrowding','SQBdependency','SQBmeaned','agesq']"
+    "del_cols = ['idhogar', 'Id','dependency','tamhog','r4t3', 'tamviv', 'r4h1', 'hogar_total','r4h2', 'r4h3', 'r4m1', 'r4m2','r4m3', 'hogar_nin', 'hogar_adul', 'hogar_mayor', 'SQBescolari','SQBage','SQBhogar_total','SQBedjefe','SQBhogar_nin','SQBovercrowding','SQBdependency','SQBmeaned','agesq']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drop_columns(data):\n",
-    "    data.drop(columns_del_list, axis=1, inplace=True)\n",
-    "#  Dealing with null or na\n",
-    "def replce_na(data):\n",
-    "    data['v2a1'].fillna(0, inplace=True)\n",
-    "    data['v18q1'].fillna(0, inplace=True)\n",
-    "    data['rez_esc'].fillna(0, inplace=True)\n",
-    "    data['meaneduc'].fillna(data['meaneduc'].median(), inplace=True)\n",
-    "def get_cat_cols(data):\n",
-    "    cols = data.columns\n",
-    "    num_cols = data._get_numeric_data().columns\n",
-    "    cat_columns = list(set(cols) - set(num_cols))\n",
-    "    return cat_columns\n",
-    "def encode_data(data):\n",
-    "    data['edjefe'] = data['edjefe'].replace(['yes'], 1)\n",
-    "    data['edjefe'] = data['edjefe'].replace(['no'], 0)\n",
-    "    data['edjefa'] = data['edjefa'].replace(['yes'], 1)\n",
-    "    data['edjefa'] = data['edjefa'].replace(['no'], 0)"
+    "data_pre.drop_columns(data,del_cols)\n",
+    "data_pre.replce_na(data)\n",
+    "data_pre.get_cat_cols(data)\n",
+    "data_pre.encode_data(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_columns(data)\n",
-    "replce_na(data)\n",
-    "get_cat_cols(data)\n",
-    "encode_data(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -105,23 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
-    "targ_1 = data[data.Target==1].sample(frac=0.8)\n",
-    "targ_2 = data[data.Target==2].sample(frac=0.8)\n",
-    "targ_3 = data[data.Target==3].sample(frac=0.8)\n",
-    "targ_4 = data[data.Target==4].sample(frac=0.8)\n",
-    "train = pd.DataFrame\n",
-    "train  = pd.concat([targ_1, targ_2, targ_3, targ_4])\n",
-    "train = train.sample(frac=1) # Shuffle data\n",
-    "test = data.loc[~data.index.isin(train.index)]"
+    "train, test = data_pre.train_test_split(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +112,7 @@
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,26 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train score for K-70 : 65.17133141511901\n",
-      "Train score for K-70 : 64.93982208267923\n"
+      "Train score for K-70 : 64.84436306565524\n",
+      "Train score for K-70 : 64.46886446886447\n"
      ]
     }
    ],
    "source": [
     "print('Train score for K-70 :', knn.score(X_train, Y_train)*100)\n",
-    "print('Train score for K-70 :',knn.score(X_test, Y_test)*100)"
+    "print('Test score for K-70 :',knn.score(X_test, Y_test)*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
-    "drop_columns(submission_x)\n",
+    "drop_columns(submission_x, del_cols)\n",
     "replce_na(submission_x)\n",
     "get_cat_cols(submission_x)\n",
     "encode_data(submission_x)"
@@ -208,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +213,13 @@
     "sub.Target = result\n",
     "sub.to_csv('submission.csv', encoding='utf-8', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
