--- a/Costa Rican Household Poverty Level Prediction/multiclass-classification--simplified.ipynb
+++ b/Costa Rican Household Poverty Level Prediction/multiclass-classification--simplified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,19 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_pre.drop_columns(data,del_cols)\n",
     "data_pre.replce_na(data)\n",
     "data_pre.get_cat_cols(data)\n",
-    "data_pre.encode_data(data)"
+    "data_pre.encode_data(data)\n",
+    "train, test = data_pre.train_test_split(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,16 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train, test = data_pre.train_test_split(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +104,7 @@
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,15 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train score for K-70 : 64.84436306565524\n",
-      "Train score for K-70 : 64.46886446886447\n"
+      "Train score for K-70 : 65.10593774522626\n",
+      "Test score for K-70 : 63.73626373626373\n"
      ]
     }
    ],
@@ -213,20 +205,6 @@
     "sub.Target = result\n",
     "sub.to_csv('submission.csv', encoding='utf-8', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
