desion tree algorithm
desion tree algorithm

--- a/Costa Rican Household Poverty Level Prediction/multiclass-classification--simplified.ipynb
+++ b/Costa Rican Household Poverty Level Prediction/multiclass-classification--simplified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "%matplotlib inline\n",
     "import random\n",
     "random.seed(10)\n",
-    "import data_pre as data_pre"
+    "import data_pre as data_pre\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -104,28 +112,27 @@
        "                     weights='uniform')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "knn = KNeighborsClassifier(70)\n",
     "knn.fit(X_train, Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train score for K-70 : 65.10593774522626\n",
-      "Test score for K-70 : 63.73626373626373\n"
+      "Train score for K-70 : 65.0405440753335\n",
+      "Test score for K-70 : 65.04447933019361\n"
      ]
     }
    ],
@@ -136,7 +143,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  from sklearn.metrics import roc_curve,auc\n",
+    "# # y_scores or predict_prob gives probabilities for each class -- here 0,1 --> probability for 0, probability for 1\n",
+    "# y_scores = knn.predict_proba(X_test)\n",
+    "# y_hat = knn.predict(X_test)\n",
+    "# knn.score(X_test, y_hat)\n",
+    "# # j=0;\n",
+    "# # for i in y_scores:\n",
+    "# #     print(i, '---->', y_hat[j])\n",
+    "# #     j=j+1\n",
+    "# # y_scores[:, 1] --> probabilities for class 1\n",
+    "# fpr, tpr, threshold = roc_curve(Y_test, y_scores[:, 1])\n",
+    "\n",
+    "# print(Y_test.shape)\n",
+    "# print('fpr', fpr.shape)\n",
+    "# print('tpr', tpr.shape)\n",
+    "# print('Threshold', threshold.shape)\n",
+    "\n",
+    "# roc_auc = auc(fpr, tpr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,19 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "drop_columns(submission_x, del_cols)\n",
-    "replce_na(submission_x)\n",
-    "get_cat_cols(submission_x)\n",
-    "encode_data(submission_x)"
+    "data_pre.drop_columns(submission_x, del_cols)\n",
+    "data_pre.replce_na(submission_x)\n",
+    "data_pre.get_cat_cols(submission_x)\n",
+    "data_pre.encode_data(submission_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,6 +259,13 @@
     "sub.Target = result\n",
     "sub.to_csv('submission.csv', encoding='utf-8', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
